Adds optional securityLevel parameter to SR requests.